--- a/chamados/templates/chamados/listar_erro.html
+++ b/chamados/templates/chamados/listar_erro.html
@@ -10,10 +10,9 @@
       <hr>
 <div class="row">
     <div class="col-md-12">
-    <h5> Está página de listar será disponível em breve. </h5> 
+    <h5> Está página está bloqueada por motivos de segurança</h5> 
     </div>
 </div>
-
 
 {% include 'parciais/_pagination.html'%}
     </tfoot>
