voltando para o github

--- a/perfil/templates/perfil/perfil.html
+++ b/perfil/templates/perfil/perfil.html
@@ -62,7 +62,7 @@
         </div>
         <div class="form-check ml-1">
             <input class="form-check-input position-static" type="checkbox" id="autorizacao" value="autorizacao"
-            oninvalid="this.setCustomValidity('Para atulizar suas informações, você precisa estar de acordo com o termo.')" required>
+             required>
             <span class="checkboxtext">
                 Eu {{ funcionario.nome|title }}, autorizo o departamento de <strong> Recursos Humanos </strong>
                 a armazenar meu número de celular pessoal e/ou e-mail pessoal, com a finalizade
