--- a/perfil/templates/perfil/perfil.html
+++ b/perfil/templates/perfil/perfil.html
@@ -53,28 +53,34 @@
 
         <div class="form-group  col-md-6">
             <label for="telefone"><strong>Telefone : </strong></label>
-            <input type="text" class="form-control" id="telefone" name="telefone" value="{{ funcionario.telefone }}">
+            <input type="text" class="form-control" id="telefone_edit" name="telefone" value="{{ funcionario.telefone }}">
         </div>
 
         <div class="form-group  col-md-6">
             <label for="email"><strong>Email Pessoal: </strong></label>
-            <input type="email" class="form-control" id="email" name="email" value="{{ funcionario.email }}">
+            <input type="email" class="form-control" id="email_edit" name="email" value="{{ funcionario.email }}">
         </div>
-        <div class="form-check ml-1">
-            <input class="form-check-input position-static" type="checkbox" id="autorizacao" value="autorizacao"
-             required>
-            <span class="checkboxtext">
+
+        <div class="form-check">
+            <input class="form-check-input" type="radio" name="termo_dados" id="termo_dados" value="1" required>
+            <label class="form-check-label" for="termo_dados">
                 Eu {{ funcionario.nome|title }}, autorizo o departamento de <strong> Recursos Humanos </strong>
                 a armazenar meu número de celular pessoal e/ou e-mail pessoal, com a finalizade
                 exclusiva de ser contatado pelos funcionários do departamento de RH e/ou Gestão.
-            </span>
+            </label>
+        </div>
+        <div class="form-check mt-2">
+            <input class="form-check-input" type="radio" name="termo_dados" id="termo_dados" value="2" required>
+            <label class="form-check-label" for="termo_dados">
+            Eu {{ funcionario.nome|title }}, Solicito a exclusão dos meus dados.
+            </label>
         </div>
         </form>
 
         <div class="mt-4 col-md-12">
         <button type="submit" class="btn btn-success float-right  w-100 mt-1">Alterar Informações</button>
         </div>
-
+        
     </div>
 
 {% endblock %}
