--- a/perfil/templates/perfil/perfil.html
+++ b/perfil/templates/perfil/perfil.html
@@ -62,7 +62,7 @@
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="termo_dados" id="termo_dados" value="1" required>
+            <input class="form-check-input" type="radio" name="termo_dados" id="termo_dados_1" value="Alteração" required>
             <label class="form-check-label" for="termo_dados">
                 Eu {{ funcionario.nome|title }}, autorizo o departamento de <strong> Recursos Humanos </strong>
                 a armazenar meu número de celular pessoal e/ou e-mail pessoal, com a finalizade
@@ -70,7 +70,7 @@
             </label>
         </div>
         <div class="form-check mt-2">
-            <input class="form-check-input" type="radio" name="termo_dados" id="termo_dados" value="2" required>
+            <input class="form-check-input" type="radio" name="termo_dados" id="termo_dados_2" value="Exclusão" required>
             <label class="form-check-label" for="termo_dados">
             Eu {{ funcionario.nome|title }}, Solicito a exclusão dos meus dados.
             </label>
