Enviando o código para mostrar para o Pedro .....

--- a/perfil/templates/perfil/login.html
+++ b/perfil/templates/perfil/login.html
@@ -34,7 +34,7 @@
 <div class="col-md-12">
   <button type="reset"  class="btn btn-warning float-right ml-2 w-25" value="Reset">Limpar</button>
   <button type="submit" class="btn btn-success float-right w-25">Entrar</button>
-  <button type="button" class="btn btn-info">Esqueci minha senha</button>
+  <a href="{% url 'perfil:resetar_senha' %}" type="button" class="btn btn-info">Esqueci minha senha</a>
  </div>
  </div>
 
