--- a/perfil/templates/perfil/modificar_senha.html
+++ b/perfil/templates/perfil/modificar_senha.html
@@ -7,12 +7,12 @@
 
 
 {% block conteudo %}
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-8 offset-md-2">
     <h3 class="">Alterar senha</h3>
       <hr>
 <form method="POST" enctype="multipart/form-data" action="{% url 'perfil:set_password' %}">
-{% csrf_token %} {{form|bootstrap}}
+{% csrf_token %} 
 <div class="row">
 <div class="col-md-12">
   <button type="reset"  class="btn btn-warning float-right ml-2 w-25" value="Reset">Limpar</button>
@@ -22,5 +22,6 @@
 
 </form>
 </div>
-</div> <!-- ./row -->
+</div>  -->
+<h1>TESTANDO</h1>
 {% endblock %}
