--- a/perfil/templates/perfil/modificar_senha.html
+++ b/perfil/templates/perfil/modificar_senha.html
@@ -7,12 +7,42 @@
 
 
 {% block conteudo %}
-<!-- <div class="row">
+
+<div class="row">
   <div class="col-md-8 offset-md-2">
+
     <h3 class="">Alterar senha</h3>
       <hr>
-<form method="POST" enctype="multipart/form-data" action="{% url 'perfil:set_password' %}">
-{% csrf_token %} 
+<form method="POST" enctype="multipart/form-data" action="{% url 'perfil:set_password' %}" autocomplete="off">
+{% csrf_token %}
+<div class="form-row">
+
+<div class="form-group col-md-12">
+<label for="numero_registro">Número de Registro : </label>
+<input type="text" id="old_password" name="old_password" class="form-control">
+</div>
+
+<div class="form-group col-md-12">
+<label for="numero_registro">Digite sua data da Admissão : </label>
+<input type="text" id="admissao" name="admissao" class="form-control" placeholder="Exemplo : DD/MM/YYYY">
+</div>
+
+<div class="form-group col-md-12 ml-3">
+{{ form.new_password1.help_text }}
+</div>
+
+<div class="form-group col-md-12">
+<label for="numero_registro">Nova Senha: </label>
+<input type="password" id="new_password1" name="new_password1" class="form-control">
+</div>
+
+<div class="form-group col-md-12">
+  <label for="numero_registro">Confirmação da Senha : </label>
+  <input type="password" id="new_password2" name="new_password2" class="form-control">
+</div>
+
+</div>
+
 <div class="row">
 <div class="col-md-12">
   <button type="reset"  class="btn btn-warning float-right ml-2 w-25" value="Reset">Limpar</button>
@@ -22,6 +52,5 @@
 
 </form>
 </div>
-</div>  -->
-<h1>TESTANDO</h1>
+</div> 
 {% endblock %}
