--- a/chamados/templates/chamados/atualizar.html
+++ b/chamados/templates/chamados/atualizar.html
@@ -4,6 +4,7 @@
 {% block titulo %} Atualizar Chamado {% endblock %}
 
 {% block conteudo %}
+
 <div class="row">
         <div class="col-12">
             <p class="lead"> Atualizar chamado de <code>{{ ticket.nome }}</code></p>
@@ -11,49 +12,74 @@
 
 <form method="POST" enctype="multipart/form-data" action="{% url 'chamados:atualizar_chamado' ticket.id %}">
 {% csrf_token %}
+
 <div class="form-row">
-  <div class="form-group  col-md-3">
-    <label for="unidade">Unidade : </label>
-    <input type="text" class="form-control" id="unidade" name="unidade" value="{{ ticket.funcionario.unidade }}" readonly>
+ 
+  <div class="form-group  col-md-6">
+    <label for="re"><strong>Registro : </strong></label>
+    <input type="text" class="form-control" id="re_funcionario" name="re_funcionario"
+      value="{{ ticket.funcionario.re_funcionario }}" readonly>
   </div>
-   <div class="form-group col-md-3">
-    <label for="re">RE : </label>
-    <input type="number" class="form-control" id="funcionario" name="funcionario" maxlength="5" minlength="4"
-      value="{{ ticket.funcionario.re_funcionario }}" readonly> 
+  
+  <div class="form-group  col-md-6">
+    <label for="nome"><strong>Nome do Funcionário : </strong></label>
+    <input type="text" class="form-control" id="nome" name="nome" value="{{ ticket.funcionario.nome }}" readonly>
   </div>
+  
+  <div class="form-group col-md-6">
+    <label for="unidade"><strong>Unidade : </strong></label>
+    <select name="unidade" class="select form-control form-control" id="unidade" readonly>
+      <option value="{{ ticket.funcionario.unidade.id }}">{{ ticket.funcionario.unidade }}</option>
+    </select>
+  </div>
+  
+  <div class="form-group col-md-6">
+    <label for="centro_de_custo"><strong>Centro de Custo : </strong></label>
+    <input type="text" class="form-control" id="centro_de_custo" name="centro_de_custo"
+      value="{{ ticket.funcionario.centro_de_custo }}" readonly>
+  </div>
+  
+  <div class="form-group  col-md-6">
+    <label for="ramal"><strong>Ramal : </strong></label>
+    <input type="text" class="form-control" id="ramal" name="ramal" value="{{ ticket.funcionario.ramal }}" readonly>
+  </div>
+  
+  <div class="form-group  col-md-6">
+    <label for="email_corporativo"><strong>Email Corporativo : </strong></label>
+    <input type="email" class="form-control" id="email_corporativo" name="email_corporativo"
+      value="{{ ticket.funcionario.email_corporativo }}" readonly>
+  </div>
+  
+  <div class="form-group  col-md-6">
+    <label for="telefone"><strong>Telefone : </strong></label>
+    <input type="text" class="form-control" id="telefone_edit" name="telefone" value="{{ ticket.funcionario.telefone }}" readonly>
+  </div>
+  
+  <div class="form-group  col-md-6">
+    <label for="email"><strong>Email Pessoal: </strong></label>
+    <input type="email" class="form-control" id="email_edit" name="email" value="{{ ticket.funcionario.email }}" readonly>
+  </div>
+
       <div class="form-group col-md-6">
-    <label for="re">Nome do Funcionário : </label>
-    <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite um RE válido."
-      value="{{ ticket.funcionario.nome }}" readonly> 
-  </div>
-   <div class="form-group col-md-4">
-    <label for="ramal">Ramal / Telefone: </label>
-    <input type="number" class="form-control" id="ramal" name="ramal" value="{{ ticket.funcionario.ramal }}" readonly>
-  </div>
-    <div class="form-group col-md-8">
-    <label for="email">Email Funcionário : </label>
-    <input type="email" class="form-control" id="email" name="email" value="{{ ticket.funcionario.email }}" readonly>
-  </div>
-      <div class="form-group col-md-6">
-        <label> Categoria </label>
+        <label> <strong>Categoria</strong> </label>
         <select name="categoria" class="select form-control form-control" id="categoria" readonly>
           <option value="{{ ticket.categoria.id }}">{{ ticket.categoria }}</option>
         </select>
       </div>
       <div class="form-group col-md-6">
-        <label> Subcategoria </label>
+        <label> <strong>Subcategoria</strong> </label>
         <select name="subcategoria" class="select form-control form-control" id="subcategoria" readonly>
           <option value="{{ ticket.subcategoria.id }}">{{ ticket.subcategoria }}</option>
         </select>
       </div>
     <div class="form-group col-md-12">
-    <label for="texto">Descrição do Chamado : </label>
+    <label for="texto"><strong>Descrição do Chamado : </strong></label>
     <textarea class="form-control" id="texto-atualizar" name="texto" rows="5" col="15"
       readonly>{{ ticket.texto }}</textarea>
   </div>
 {% if ticket.finalizado == False %}
     <div class="form-group col-md-12">
-    <label for="resposta">Resposta : </label>
+    <label for="resposta"><strong>Resposta : </strong></label>
     <textarea class="form-control" id="texto-azul" name="resposta" rows="5" col="15" value="{{ ticket.resposta }}"
       required>{{ ticket.resposta }}</textarea>
   </div>
