--- a/static/assets/custom/css/style.css
+++ b/static/assets/custom/css/style.css
@@ -11,6 +11,14 @@
     z-index: 1055;
 }
 
+#id_username {
+    display: none;
+}
+
+label[for=id_username] {
+    display: none;
+}
+
 ul.paginator {
     z-index: 1050;
 }
@@ -68,4 +76,12 @@ main {
 input[type="radio"] + label {
     font-family:Arial, sans-serif;
     font-size:15px;
+}
+
+
+.history-field {
+    overflow-y: auto;
+    height:200px;
+    background: #E9ECEF; 
+    border: 1px solid #cecece;
 }
