--- a/templates/parciais/_nav.html
+++ b/templates/parciais/_nav.html
@@ -29,7 +29,7 @@
         </ul>
         <a class="navbar-brand" href="#">
           <img id="logo" src="{% static 'img/logo.png' %}" alt="Vitesco" width="100" height="50">
-          <img id="logo" src="{% static 'img/logo2.png' %}" alt="Vitesco" width="100" height="50">
+          <img id="logo" src="{% static 'img/logo2.png' %}" alt="Continental" width="100" height="50">
         </a>
         {% if  user.is_authenticated %}
         <ul class="nav navbar-nav ml-auto" style="font-size: 17px;">
