--- a/chamados/templates/chamados/atualizar.html
+++ b/chamados/templates/chamados/atualizar.html
@@ -10,7 +10,7 @@
             <p class="lead"> Atualizar chamado de <code>{{ ticket.funcionario.nome|capfirst }}</code></p>
             <hr>
 
-<form method="POST" enctype="multipart/form-data" action="{% url 'chamados:atualizar_chamado' ticket.id %}">
+<form method="POST" enctype="multipart/form-data" action="{% url 'chamados:finalizar_chamado' ticket.id %}">
 {% csrf_token %}
 
 <div class="form-row">
@@ -72,14 +72,14 @@
           <option value="{{ ticket.subcategoria.id }}">{{ ticket.subcategoria }}</option>
         </select>
       </div>
-    <div class="form-group col-md-12">
+    <!-- <div class="form-group col-md-12">
     <label for="texto"><strong>Descrição do Chamado : </strong></label>
     <textarea class="form-control" id="texto-atualizar" name="texto" rows="3" col="15"
       readonly>{{ ticket.texto }}</textarea>
-  </div>
+  </div> -->
 
 <div class="form-group col-md-12">
-  <label for="texto">Historico de Mensagens: </label>
+  <label for="texto">Historico </label>
   <div class="history-field">
     <hr style="border: 1px solid rgb(119, 119, 119); ">
     <p class="m-2 name_employee"> <strong> &nbsp; &nbsp; {{ ticket.funcionario.nome }},
@@ -120,8 +120,7 @@
 
 <div class="form-group  col-md-12 mt-4 p-2">
 <button type="submit"  class="btn btn-success w-25" id="finaliza_ticket">Finalizar Chamado</button>
-<button type="submit" class="btn btn-primary w-25" id="finaliza_ticket">Atualizar o Chamado</button>
-<!-- <a type="button" href="{% url 'chamados:atualizar_chamado' ticket.id %}" class="btn btn-primary w-25">Atualizar o Chamado</button> -->
+<!-- <a type="button" href="{% url 'chamados:listar' %}" class="btn btn-primary w-25">Atualizar o Chamado</button> -->
 <a type="button" href="{% url 'chamados:listar' %}" class="btn btn-warning w-25">&nbsp;&nbsp;&nbsp; Voltar &nbsp;&nbsp;&nbsp;</a>
 </div>
 
@@ -150,5 +149,6 @@
 </div>
 </div>
 </div> 
+
 
 {% endblock %}
