--- a/chamados/templates/chamados/tickets_por_funcionarios.html
+++ b/chamados/templates/chamados/tickets_por_funcionarios.html
@@ -56,7 +56,7 @@
           </div> -->
         
         <div class="form-group col-md-12">
-            <label for="texto">Historico </label>
+            <label for="texto">Historico : </label>
             <div class="history-field ">
                 <hr style="border: 1px solid rgb(119, 119, 119); ">
                 <p class="m-2 name_employee"> <strong> &nbsp; &nbsp; {{ ticket.funcionario.nome }},
@@ -110,7 +110,7 @@
         {% if request.user|belong_group:"RH" or request.user|belong_group:"ADMIN" and not ticket.finalizado %}
 
         <div class="form-group  col-md-4 mt-4">
-            <button type="submit" class="btn btn-success w-100" id="finaliza_ticket">Finalizar Chamado</button>
+            <button type="submit" class="btn btn-success w-100" id="finaliza_ticket">Finalizar</button>
         </div>
 
         <div class="form-group  col-md-4 mt-4">
