--- a/chamados/templates/chamados/tickets_por_funcionarios.html
+++ b/chamados/templates/chamados/tickets_por_funcionarios.html
@@ -34,7 +34,7 @@
         </div>
         <div class="form-group col-md-8">
             <label for="email">Email Funcionário : </label>
-            <input type="email" class="form-control" id="email" name="email" value="{{ ticket.funcionario.email }}"
+            <input type="email" class="form-control" id="email" name="email" value="{{ ticket.funcionario.email_corporativo }}"
                 readonly>
         </div>
         <div class="form-group col-md-6">
