Indo para a empresa

--- a/perfil/templates/perfil/modificar_senha.html
+++ b/perfil/templates/perfil/modificar_senha.html
@@ -24,7 +24,7 @@
 
 <div class="form-group col-md-12">
 <label for="numero_registro">Digite sua data da Admissão : </label>
-<input type="text" id="admissao" name="admissao" class="form-control" placeholder="Exemplo : DD/MM/YYYY">
+<input type="text" id="admissao" name="admissao" class="form-control" data-mask="00/00/0000" placeholder="DD/MM/AAAA"">
 </div>
 
 <div class="form-group col-md-12 ml-3">
