--- a/chamados/templates/chamados/tickets_por_funcionarios.html
+++ b/chamados/templates/chamados/tickets_por_funcionarios.html
@@ -12,12 +12,12 @@
 <form method="POST" enctype="multipart/form-data" action="{% url 'chamados:finalizar_chamado' ticket.id %}">
     {% csrf_token %}
     <div class="form-row">
-        <div class="form-group  col-md-3">
+        {% comment %} <div class="form-group  col-md-3">
             <label for="unidade">Unidade : </label>
             <input type="text" class="form-control" id="unidade" name="unidade" value="{{ ticket.funcionario.unidade }}"
                 readonly>
-        </div>
-        <div class="form-group col-md-3">
+        </div> {% endcomment %}
+        <div class="form-group col-md-6">
             <label for="re">RE : </label>
             <input type="number" class="form-control" id="funcionario" name="funcionario" maxlength="5" minlength="4"
                 value="{{ ticket.funcionario.re_funcionario }}" readonly>
@@ -27,12 +27,12 @@
             <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite um RE válido."
                 value="{{ ticket.funcionario.nome }}" readonly>
         </div>
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-6">
             <label for="ramal">Ramal / Telefone : </label>
             <input type="number" class="form-control" id="ramal" name="ramal" value="{{ ticket.funcionario.ramal }}"
                 readonly>
         </div>
-        <div class="form-group col-md-8">
+        <div class="form-group col-md-6">
             <label for="email">Email Funcionário : </label>
             <input type="email" class="form-control" id="email_corporativo" name="email_corporativo" value="{{ ticket.funcionario.email_corporativo }}"
                 readonly>
