--- a/perfil/templates/perfil/reset_senha.html
+++ b/perfil/templates/perfil/reset_senha.html
@@ -7,43 +7,38 @@
 
 {% block conteudo %}
 
-{{form|bootstrap}}
+
 <div class="row">
   <div class="col-md-8 offset-md-2">
     <h3>Restaurar sua Senha </h3>
       <hr>
   </div>
-
+ 
   <div class="form-group col-md-8 offset-md-2">
+<form method="POST" enctype="multipart/form-data" action="{% url 'perfil:resetar_senha' %}">
     <p> Selecione sua Unidade : </p>
     <select id="unidade" name="unidade" class="select form-control form-control">
       <option value="" selected="">----------</option>
-  
-      <option value="2">Camaçari</option>
-  
-      <option value="3">Ponta Grossa</option>
-  
-      <option value="1">Salto</option>
-  
+      {% for unidade in unidade %}
+      <option value="{{ unidade.id }}"> {{ unidade }}</option>
+      {% endfor %}
     </select>
   </div>
 
   <div class="form-group col-md-8 offset-md-2">
     <p> Digite seu número de registro : </p>
-      <input type="text" id="registro" name="registro" class="form-control">
+      <input type="text" id="funcionario-login-reset" name="funcionario" class="form-control">
   </div>
 
   <div class="form-group col-md-8 offset-md-2">
-<form method="POST" enctype="multipart/form-data" action="{% url 'perfil:set_password' %}" autocomplete="off">
     <p> Qual a data de sua admissão : </p>
     <input type="text" id="admissao" name="admissao" class="form-control" data-mask="00/00/0000" placeholder="DD/MM/AAAA">
   </div>
-
-
   </form>
+
   <div class="form-group col-md-8 offset-md-2">
     <a href="{% url 'chamados:enviar' %}" class="btn btn-warning ml-3 float-right w-25" role="button">Voltar</a>
-    <button type="submit" id="enviar_reset" class="btn btn-success ml-3 float-right w-25">Enviar Resposta</button>
+    <button type="submit" class="btn btn-success ml-3 float-right w-25">Enviar Resposta</button>
   </div>
 
   </div>
