--- a/perfil/templates/perfil/perfil.html
+++ b/perfil/templates/perfil/perfil.html
@@ -32,8 +32,8 @@
 
         <div class="form-group col-md-6">
             <label for="centro_de_custo"><strong>Centro de Custo : </strong></label>
-            <input type="text" class="form-control" id="centro_de_custo" name="centro_de_custo"
-                value="{{ funcionario.centro_de_custo }}" readonly>
+            <input type="text" class="form-control" id="centro_de_custo_link" name="centro_de_custo_link"
+                value="{{ funcionario.centro_de_custo_link }}" readonly>
         </div>
 
         <!-- <div class="form-group  col-md-5">
