--- a/perfil/templates/perfil/perfil.html
+++ b/perfil/templates/perfil/perfil.html
@@ -33,7 +33,7 @@
         <div class="form-group col-md-6">
             <label for="centro_de_custo"><strong>Centro de Custo : </strong></label>
             <input type="text" class="form-control" id="centro_de_custo_link" name="centro_de_custo_link"
-                value="{{ funcionario.centro_de_custo_link }}" readonly>
+                value="{{ funcionario.centro_de_custo_link.numero }}" readonly>
         </div>
 
         <!-- <div class="form-group  col-md-5">
