Arrumando o err ono enviou de Ticket

--- a/chamados/templates/chamados/enviar.html
+++ b/chamados/templates/chamados/enviar.html
@@ -57,6 +57,7 @@
 </form>
 
 <a href="{% url 'formularios:enviar_justificativa_ausencia' %}" id="justificativa_ausencia_link" hidden></a>
+<a href="{% url 'formularios:enviar_agendamento_ferias' %}" id="agendamento_ferias_link" hidden></a>
 
 </div>
 </div> 
