--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -237,6 +237,7 @@
       if(selectedSubCategory == 'Justificativa de Ausência' ){
        $('#justificativa_ausencia_link')[0].click();
       }
+      else if(selectedSubCategory == 'Férias')
 
     });
 </script>
