--- a/perfil/templates/perfil/logout.html
+++ b/perfil/templates/perfil/logout.html
@@ -10,7 +10,7 @@
     <div class="col-12">
         <h1 class="">Logout</h1>
         <hr>
-<p>Você está deslogado.</p>
+<p>Você foi desconectado, obrigado por utilizar nossa plataforma, até breve.</p>
 <div>
 <small class="text-muted">
 <hr/>
