--- a/perfil/templates/perfil/reset_senha.html
+++ b/perfil/templates/perfil/reset_senha.html
@@ -15,7 +15,8 @@
   </div>
  
   <div class="form-group col-md-8 offset-md-2">
-<form method="POST" enctype="multipart/form-data" action="{% url 'perfil:resetar_senha' %}">
+<form method="POST" enctype="multipart/form-data" action="{% url 'perfil:reset_password' %}">
+  {% csrf_token %}
     <p> Selecione sua Unidade : </p>
     <select id="unidade" name="unidade" class="select form-control form-control">
       <option value="" selected="">----------</option>
@@ -27,8 +28,14 @@
 
   <div class="form-group col-md-8 offset-md-2">
     <p> Digite seu número de registro : </p>
-      <input type="text" id="funcionario-login-reset" name="funcionario" class="form-control">
+      <input type="text" id="funcionario-login-reset" name="funcionario-login-reset" class="form-control">
   </div>
+
+  <div class="form-group col-md-8 offset-md-2">
+    <p> Login : </p>
+    <input type="text" id="username" name="id_username" class="form-control">
+  </div>
+
 
   <div class="form-group col-md-8 offset-md-2">
     <p> Qual a data de sua admissão : </p>
