--- a/templates/parciais/_footer.html
+++ b/templates/parciais/_footer.html
@@ -127,6 +127,7 @@
 
 
   <script>
+    // Fazer o login do usuário.
   jQuery("#funcionario-login").change(function () {
         let funcionario_login = jQuery(this).val();
         console.log("login : ", funcionario_login)
@@ -160,12 +161,13 @@
 
 
     <script>
+      // Reset da senha, sequeceu sua senha.
   jQuery("#funcionario-login-reset").change(function () {
         let funcionario_senha_reset = jQuery(this).val();
         console.log("registro : ", funcionario_senha_reset)
         let unidade = jQuery("#unidade").val();
         console.log("unidade: ", unidade)
-        let url = "/resetar_senha/" + funcionario_senha_reset + "/";
+        let url = "/funcionario_login_reset/" + funcionario_senha_reset + "/";
         jQuery.ajax({
           url: url,
           type: 'GET',
@@ -178,12 +180,12 @@
           },
 
           success: function (data) {
-          console.log(unidade)
-          concatenar = jQuery("#id_username").val(unidade + funcionario_login)
-          console.log('usuario : ', concatenar)
+          username = jQuery("#username").val(unidade + funcionario_senha_reset)
+          admissao = jQuery('#admissao').val()
           },
   
           error: function (xhr) {
+            console.log('url : ', url)
             // body... xhr.statusText + xhr.responseText
           },
           complete: function () {
@@ -237,7 +239,9 @@
       if(selectedSubCategory == 'Justificativa de Ausência' ){
        $('#justificativa_ausencia_link')[0].click();
       }
-      else if(selectedSubCategory == 'Férias')
+      else if(selectedSubCategory == 'Férias'){
+
+      }
 
     });
 </script>
@@ -246,5 +250,16 @@
   $(document).ready(function () {
     periodo_inicio = $('#periodo_inicio').val();
     console.log(periodo_inicio)
+  });
+</script>
+
+<script>
+  $('#telefone_edit').mask('(00) 00000-00009');
+  $('#telefone_edit').blur(function (event) {
+    if ($(this).val().length == 15) { // Celular com 9 dígitos + 2 dígitos DDD e 4 da máscara
+      $('#telefone_edit').mask('(00) 00000-00009');
+    } else {
+      $('#telefone_edit').mask('(00) 0000-00009');
+    }
   });
 </script>
