Enviando o commit inicial da sessão espelho

--- a/templates/parciais/_nav.html
+++ b/templates/parciais/_nav.html
@@ -12,6 +12,9 @@
           <a class="nav-link" href="{% url 'perfil:perfil' %}">Perfil</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="{% url 'perfil:espelho' %}">Espelho</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="{% url 'chamados:enviar' %}">Chamado</a>
           </li>
           <li class="nav-item">
