Em progresso espelhos

--- a/perfil/templates/perfil/espelho.html
+++ b/perfil/templates/perfil/espelho.html
@@ -14,7 +14,7 @@
     </div>
    
     <div class="form-group col-md-8 offset-md-2">
-  
+      <img  src="{{ funcionario.espelho.url }}" class="img-thumbnail" style=" max-width: 40px; ">
     </div>
   
   
