--- a/perfil/templates/perfil/espelho.html
+++ b/perfil/templates/perfil/espelho.html
@@ -9,12 +9,12 @@
 
 <div class="row">
     <div class="col-md-12">
-      <h3>Cartão Ponto </h3>
+      <h3>Cartão Ponto do Funcionário : <code>{{ request.user.funcionario.nome }}</code> </h3>
         <hr>
     </div>
    
     <div class="form-group col-md-8 offset-md-2">
-      <img  src="{{ funcionario.espelho.url }}" class="img-thumbnail" style=" max-width: 40px; ">
+      <img  src="{{ funcionario.get_photo_url }}" class="img-thumbnail" style="width: 1200px;">
     </div>
   
   
