Subindo para a master com correção

--- a/perfil/templates/perfil/espelho.html
+++ b/perfil/templates/perfil/espelho.html
@@ -7,7 +7,7 @@
 
 {% block conteudo %}
 
-{{ funcionario.get_photo_url }}
+<!-- {{ funcionario.get_photo_url }} -->
 <div class="row">
     <div class="col-md-12">
       <h3>Cartão Ponto </h3>
