--- a/perfil/templates/perfil/espelho.html
+++ b/perfil/templates/perfil/espelho.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load filters %}
 {% load bootstrap %}
 
 {% block titulo %} Cartão Ponto {% endblock %}
@@ -7,14 +8,23 @@
 
 {% block conteudo %}
 
-{{ funcionario.get_photo_url }}
+
 <div class="row">
     <div class="col-md-12">
-      <h3>Cartão Ponto </h3>
-      <p class="lead">A visualização em tela do cartão ponto não isenta a obrigação de sua assinatura no documento físico.</p>
-        <hr>
+
+    {% if funcionario.get_photo_url|photo_view is True  %}
+    <h3>Cartão Ponto </h3>
+    <p class="lead">Você não tem espeçho, entre em contato com o RH e evite 7 anos de azar.</p>
+    <hr>
+    
+    {% else %}
+    <h3>Cartão Ponto </h3>
+    <p class="lead">A visualização em tela do cartão ponto não isenta a obrigação de sua assinatura no documento físico.</p>
+    <hr>
+    
+    {% endif %}
     </div>
-   
+    
     <div class="form-group col-md-8 offset-md-2">
       <img  src="{{ funcionario.get_photo_url }}" class="img-thumbnail" style="width: 1200px;">
     </div>
