Fix text espelho

--- a/perfil/templates/perfil/espelho.html
+++ b/perfil/templates/perfil/espelho.html
@@ -13,7 +13,7 @@
 
     {% if funcionario.get_photo_url|photo_view is True  %}
     <h3>Cartão Ponto </h3>
-    <p class="lead">Você não tem espeçho, entre em contato com o RH e evite 7 anos de azar.</p>
+    <p class="lead">Você não tem espelho, entre em contato com o RH e evite 7 anos de azar.</p>
     <hr>
     
     {% else %}
